# fiat

./: Cargo.toml  README.md
.github/workflows/: deploy.yml
assets_raw/: attack.piv  idle.piv  player.aseprite  run.piv  tileset.aseprite
crates/animation/: Cargo.toml
crates/animation/src/: lib.rs
crates/asset/: Cargo.toml
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs
crates/controller/: Cargo.toml
crates/data/: Cargo.toml
crates/data/src/: lib.rs
crates/level_gen/: Cargo.toml
crates/level_gen/src/: lib.rs
crates/utils/: Cargo.toml
src/: main.rs  main_menu.rs  splash.rs
src/game/: mod.rs
